--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-# For projects using Nanoc (http://nanoc.ws/)
+# Node modules
+node_modules
 
-# Default location for output (needs to match output_dir's value found in nanoc.yaml)
-output/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Temporary file directory
-tmp/nanoc/
+# Environment variables
+.env
 
-# Crash Log
-crash.log
+# OS-specific files
+.DS_Store
