<add products, User and errorLog DB>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
     "debug": "^4.3.4",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.18.3",
     "express-handlebars": "^8.0.1",
@@ -30,6 +31,7 @@
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
+    "mysql2": "^3.11.0",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
@@ -37,6 +39,7 @@
     "pug": "^3.0.3",
     "readdirp": "^3.6.0",
     "semver": "^7.6.0",
+    "sequelize": "^6.37.3",
     "simple-update-notifier": "^2.0.0",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
