--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.6.1",
     "ms": "^2.1.2",
     "mysql2": "^3.11.0",
     "nopt": "^1.0.10",
