--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "braces": "^3.0.2",
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
+    "connect-mongodb-session": "^5.0.0",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
