--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "braces": "^3.0.2",
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "csurf": "^1.11.0",
     "debug": "^4.3.4",
