--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "mongoose": "^8.6.1",
     "ms": "^2.1.2",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
