--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
