--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.1",
     "ms": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
+    "pdfkit": "^0.15.0",
     "picomatch": "^2.3.1",
     "pstree.remy": "^1.1.8",
     "pug": "^3.0.3",
