--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "semver": "^7.6.0",
     "sequelize": "^6.37.3",
     "simple-update-notifier": "^2.0.0",
+    "stripe": "^17.0.0",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
     "touch": "^3.1.0",
